--- a/app/views/wellcome_pages/about.html.erb
+++ b/app/views/wellcome_pages/about.html.erb
@@ -1,11 +1,11 @@
-<% provide(:title, "Home") %>
+<% provide(:title, "About") %>
 <!DOCTYPE html>
 <html>
   <head>
     <title><%= yield(:title) %> | JEANS APP</title>
   </head>
   <body>
-    <h1>JEANS APP</h1>
-    <p>これはJEANS APPのホームページです</p>
+    <h1>About</h1>
+    <p>これはJEANS APPのAboutページです</p>
   </body>
 </html>
