Homeページを作成

--- a/app/views/wellcome_pages/home.html.erb
+++ b/app/views/wellcome_pages/home.html.erb
@@ -1,11 +1,6 @@
-<% provide(:title, "Home") %>
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= yield(:title) %> | JEANS APP</title>
-  </head>
-  <body>
-    <h1>JEANS APP</h1>
-    <p>これはJEANS APPのホームページです</p>
-  </body>
-</html>
+<div class="center jumbotron">
+  <h1>ジーンズのある生活</h1>
+  <p>これはジーンズ好きによる、ジーンズ好きのためのSNSです！</p>
+
+  <%= link_to "登録する", '#', class: "btn btn-lg btn-primary" %>
+</div>
