Usersコントローラーを追加

--- a/app/views/wellcome_pages/home.html.erb
+++ b/app/views/wellcome_pages/home.html.erb
@@ -2,5 +2,5 @@
   <h1>ジーンズのある生活</h1>
   <p>これはジーンズ好きによる、ジーンズ好きのためのSNSです！</p>
 
-  <%= link_to "登録する", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to "登録する", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
